Bug 543667 - [12] '->' not working for Switch Statements